--- a/templates/pages/show_venue.html
+++ b/templates/pages/show_venue.html
@@ -44,6 +44,10 @@
 	</div>
 	<div class="col-sm-6">
 		<img src="{{ venue.image_link }}" alt="Venue Image" />
+		<h6>
+			<a href="/venues/{{ venue.id }}/edit"><button class="btn btn-primary btn-lg">Edit Venue</button></a>
+			<button class="btn btn-default btn-lg" type = "submit" onclick="deleteOnClick(this)" data-id="{{ venue.id }}">Delete Venue</button></a>
+		</h6>
 	</div>
 </div>
 <section>
@@ -74,6 +78,19 @@
 		{% endfor %}
 	</div>
 </section>
-
+<script>
+	function deleteOnClick(e) {
+		console.log('clicked')
+		const venueId = e.dataset.id;
+		fetch('/venues/' + venueId, {
+			method: 'DELETE'
+		})
+			.then(function () {
+				window.location.href = `/venues`;
+			})
+			.catch(function (e) {
+				console.log('error', e)
+			})
+	}
+</script>
 {% endblock %}
-
